--- a/index.html
+++ b/index.html
@@ -19,5 +19,18 @@
                 </nav>
         </div>
     </header>
+
+    <main>  
+        <div class="filme-principal">
+            <div class="container">
+                <h3 class="titulo">House of cards</h3>
+                <p class="description">Num drama sobre as consequências do poder e da corrupção, Francis Underwood (Kevin Spacey) está sedento por sucesso e nada o detém. Trata-se de uma história onde são ultrapassados os limites para satisfazer o desejo de um homem que ambiciona governar o mundo.</p>
+                <div class="botoes">
+                    <button class="botao" tole="button">ASSISTIR AGORA</button>
+                    <button class="botao" tole="button">MAIS INFORMAÇÕES</button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
