mudanças de estilo e font awesome adicionado

--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
                 <h3 class="titulo">House of cards</h3>
                 <p class="description">Num drama sobre as consequências do poder e da corrupção, Francis Underwood (Kevin Spacey) está sedento por sucesso e nada o detém. Trata-se de uma história onde são ultrapassados os limites para satisfazer o desejo de um homem que ambiciona governar o mundo.</p>
                 <div class="botoes">
-                    <button class="botao" tole="button">ASSISTIR AGORA</button>
-                    <button class="botao" tole="button">MAIS INFORMAÇÕES</button>
+                    <button class="botao" tole="button">
+                        <i class="fas fa-play"></i>
+                        ASSISTIR AGORA
+                    </button>
+                    <button class="botao" tole="button">
+                        <i class="fas fa-info-circle"></i>
+                        MAIS INFORMAÇÕES
+                    </button>
                 </div>
             </div>
         </div>
     </main>
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 </body>
 </html>
