--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NETFLIX</title>
     <link rel="stylesheet" href="style/main.css">
+
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
 </head>
 <body>
     <header>
@@ -26,11 +29,11 @@
                 <h3 class="titulo">House of cards</h3>
                 <p class="description">Num drama sobre as consequências do poder e da corrupção, Francis Underwood (Kevin Spacey) está sedento por sucesso e nada o detém. Trata-se de uma história onde são ultrapassados os limites para satisfazer o desejo de um homem que ambiciona governar o mundo.</p>
                 <div class="botoes">
-                    <button class="botao" tole="button">
+                    <button class="botao" role="button">
                         <i class="fas fa-play"></i>
                         ASSISTIR AGORA
                     </button>
-                    <button class="botao" tole="button">
+                    <button class="botao" role="button">
                         <i class="fas fa-info-circle"></i>
                         MAIS INFORMAÇÕES
                     </button>
@@ -38,6 +41,44 @@
             </div>
         </div>
     </main>
+    <div class="carrosel">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="resources/min1.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min2.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min3.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min4.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min5.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min6.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min7.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min8.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min9.jpg">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="resources/min10.jpg">
+            </div>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
 </body>
+</html>
 </html>
