responsividade | last commit

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>NETFLIX</title>
     <link rel="stylesheet" href="style/main.css">
 
+    <!--Owl-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
+    
+    <!--Responsividade-->
+    <link rel="stylesheet" href="style/responsive.css">
 </head>
 <body>
     <header>
